--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,28 +90,14 @@ jobs:
           # Save the changes to the Xcode project file
           project.save
           EOF
-
-      - name: Build and Archive
-        id: build_archive
+          
+      - name: Build
+        id: build_ipa
         run: |
-          xcodebuild archive -workspace SignIn/SignIn.xcworkspace \
-          -scheme SignIn -archivePath "$RUNNER_TEMP/SignIn.xcarchive" \
-          -sdk iphonesimulator -configuration Debug \
-          -destination 'platform=iOS Simulator,name=iPhone 13 Pro Max,OS=16.2' \
-          clean archive DEVELOPMENT_TEAM="X372X3URRM" \
-          PROVISIONING_PROFILE_SPECIFIER="DemoTest" -allowProvisioningUpdates \
-          | tee build_output.txt
-
-      - name: Check for Archive file
-        run: |
-          ls -a "$RUNNER_TEMP/SignIn.xcarchive"
-          ls -a "$RUNNER_TEMP/SignIn.xcarchive/Products/Applications/"
-   
-      - name: Build and Export
-        run: |
-          xcodebuild -exportArchive -archivePath "$RUNNER_TEMP/SignIn.xcarchive" -exportOptionsPlist ExportOptions.plist -exportPath "$RUNNER_TEMP/IPA" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-
-      - name: Transfer SignIn.app to remote server
-        run: |
-          # Copy SignIn.app to the remote server using scp
-          scp -i ${{ secrets.SSH_PRIVATE_KEY }} "$RUNNER_TEMP/SignIn.xcarchive/Products/Applications/SignIn.app" ubuntu@100.26.141.100:/home/ubuntu/
+          xcodebuild -workspace SignIn/SignIn.xcworkspace \
+          -scheme SignIn clean archive -configuration release \
+          -sdk iphoneos -archivePath $RUNNER_TEMP/SignIn.xcarchive
+          
+          xcodebuild -exportArchive -archivePath $RUNNER_TEMP/SignIn.xcarchive \
+          -exportOptionsPlist ExportOptions.plist \
+          -exportPath SignIn.ipa
